--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
       <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
-    <script type="module" crossorigin src="promptVeo3/script.js"></script>
+    <script type="module" crossorigin src="script.js"></script>
   </head>
   <body>
     <div id="root"></div>
